--- a/EComerceClient/websuggest/src/style/pages/_theme.scss
+++ b/EComerceClient/websuggest/src/style/pages/_theme.scss
@@ -1,5 +1,6 @@
 $theme-colors : (
     "main": #003C43,
     "header": #77B0AA,
-    "text-in-dark": #E3FEF7
+    "text-in-dark": #E3FEF7,
+    "icon-color": #135D66
 )
