--- a/EComerceClient/websuggest/src/style/pages/_all.scss
+++ b/EComerceClient/websuggest/src/style/pages/_all.scss
@@ -30,6 +30,27 @@ body {
     max-width: 50%;
 }
 
+.col-lg-3 {
+    flex: 0 0 25%;
+    max-width: 25%;
+}
+.col-lg-6 {
+    flex: 0 0 50%;
+    max-width: 50%;
+}
+
+.button-submit {
+    font-size: 14px;
+    color: map.get($theme-colors,'text-in-dark');
+    font-weight: 800;
+    text-transform: uppercase;
+    display: inline-block;
+    padding: 16px 30px 17px;
+    background: map.get($theme-colors,'icon-color');
+    border: none;
+    height: 100%;
+}
+
 @include Responsive($DESKTOP){
     .col-xl-3{
         flex: 0 0 25%;
@@ -45,12 +66,32 @@ body {
     .col-lg-3{
         flex: 0 0 25%;
         max-width: 25%;
-        background: red;
+    }
+
+}
+@include Responsive($TABLET_DEVICE){
+    .col-md-6{
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
+    .col-md-12{
+        flex: 0 0 100%;
+        max-width: 100%;
     }
 }
 @include Responsive($SMALL_DEVICE){
-    .col-lg-3{
+    .col-xs-12{
         flex: 0 0 100%;
-        max-width: 25%;
+        max-width: 100%;
+    }
+}
+@include Responsive($WIDE_MOBILE){
+    .col-sm-12{
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+    .col-sm-6{
+        flex: 0 0 50%;
+        max-width: 50%;
     }
 }
