--- a/EComerceClient/websuggest/src/style/pages/_responsive.scss
+++ b/EComerceClient/websuggest/src/style/pages/_responsive.scss
@@ -21,12 +21,12 @@ $SMALL_DEVICE: "SMALL_DEVICE";
         }
     }
     @else if $canvas == $WIDE_MOBILE{
-        @media only screen and (max-width: 767px){
+        @media only screen and (min-width:576px) and (max-width: 767px){
             @content;
         }
     }
     @else if $canvas == $SMALL_DEVICE{
-        @media only screen and (max-width: 575px){
+        @media only screen and (min-width: 0px) and (max-width: 575px){
             @content;
         }
     }
