--- a/EComerceClient/websuggest/src/pages/theme/header/style.scss
+++ b/EComerceClient/websuggest/src/pages/theme/header/style.scss
@@ -178,5 +178,89 @@
             opacity: 0;
         }
     }
+
+    
 }
 
+.search-container{
+    .search-form {
+        width: 610px;
+        height: 50px;
+        float: left;
+    }
+    form {
+        display: flex;
+        align-items: center;
+        padding-left: 15px;
+
+    }
+    input {
+        border: none;
+        height: 46px;
+        width: 70%;
+        font-size: 16px;
+        color: map.get($theme-colors,"main");
+        padding-left: 20px;
+        border: 1px solid #e5e5e5;
+
+        :focus {
+            outline: none;
+            border: none;
+        }
+    }
+    button{
+        font-size: 14px;
+        background: map.get($theme-colors,'icon-color');
+        color: map.get($theme-colors,'text-in-dark');
+        font-weight: 800;
+        display: inline-block;
+        text-transform: uppercase;
+        padding:  16px 30px 17px;
+        height: 90%;
+        border: none;
+        
+    }
+    .search-phone{
+        display: flex;
+        align-items: center;
+        .search-phone-icon{
+            font-size: 25px;
+            padding: 10px;
+            background: #f5f5f5;
+            line-height: 50px;
+            text-align: center;
+            border-radius: 50%;
+            float: left;
+            margin-right: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: map.get($theme-colors,'header');
+        }
+        .search-phone-text{
+            display: inline-block;
+            p {
+                color: map.get($theme-colors,'main');
+                font-weight: bold;
+                margin-bottom: 5px;
+            }
+            span {
+                color: #6f6f6f;
+                font-size: 14px;
+            }
+        }
+    }
+    .item{
+        margin-left: 15px;
+        background-image: url('');
+        background-image: no-repeat;
+        background-size: cover;
+        height: 410px;
+        display: flex;
+        align-items: center;
+        padding-left: 75px;
+        .item-text{
+
+        }
+    }
+}
