--- a/EComerceClient/websuggest/src/pages/theme/header/style.scss
+++ b/EComerceClient/websuggest/src/pages/theme/header/style.scss
@@ -1,6 +1,9 @@
 @use "sass:map";
 @import "./src/style/pages/theme";
 
+
+$bannerImg:"/assets/user/image/banner.jpg";
+
 .header-top {
     background: map.get($theme-colors,"header");
 }
@@ -187,6 +190,7 @@
         width: 610px;
         height: 50px;
         float: left;
+        margin-bottom: 30px;
     }
     form {
         display: flex;
@@ -250,17 +254,53 @@
             }
         }
     }
+
     .item{
         margin-left: 15px;
-        background-image: url('');
-        background-image: no-repeat;
+        background-image: url($bannerImg);
         background-size: cover;
         height: 410px;
         display: flex;
         align-items: center;
-        padding-left: 75px;
+        width: 100%;
         .item-text{
-
+            padding-left: 75px;
+            span{
+                font-size: 14px;
+                text-transform: uppercase;
+                font-weight: 700;
+                letter-spacing: 2px;
+                color: map.get($theme-colors,"text-in-dark");
+            }
+            h2 {
+                font-size: 45px;
+                text-transform: uppercase;
+                font-weight: 700;
+                letter-spacing: 2px;
+                color: map.get($theme-colors,"icon-color");
+                line-height: 52px;
+                margin: 10px 0;
+            }
+            p {
+                font-size: 16px;
+                color: #f6f6f6;
+                font-weight: 400;
+                line-height: 26px;
+                margin: 0 0 15px 0;
+            }
+            a {
+                display: inline-block;
+                font-size: 14px;
+                padding: 10px 28px 10px;
+                color: map.get($theme-colors,"text-in-dark");
+                text-transform: uppercase;
+                font-weight: 700;
+                background: map.get($theme-colors,'icon-color');
+                letter-spacing: 2px;
+                text-decoration: none;
+                border-radius: 10px;
+                cursor: pointer;
+            }
         }
     }
 }
