Add Cart Pages and History Pages

--- a/EComerceClient/websuggest/src/pages/homePages/style.scss
+++ b/EComerceClient/websuggest/src/pages/homePages/style.scss
@@ -78,11 +78,12 @@
     }
     .featured-item {
         margin-bottom: 50px;
-
+        margin-left: 10px;
+        margin-right: 10px;
         &:hover {
             .featured-item-pic-hover{
                 bottom: -15% !important;
-
+                
             }
         }
 
@@ -91,7 +92,9 @@
             position: relative;
             overflow: hidden;
             background-position: center;
-
+            border-radius: 8px;
+            border: 1px solid map.get($theme-colors,'header');
+            background-repeat: no-repeat;
             .featured-item-pic-hover {
                 position: absolute;
                 left: 0;
@@ -147,7 +150,6 @@
             }
         }
     }
-
 }
 .banner {
     display: flex;
