--- a/EComerceClient/websuggest/src/style/pages/_theme.scss
+++ b/EComerceClient/websuggest/src/style/pages/_theme.scss
@@ -2,5 +2,6 @@ $theme-colors : (
     "main": #003C43,
     "header": #77B0AA,
     "text-in-dark": #E3FEF7,
-    "icon-color": #135D66
+    "icon-color": #135D66,
+    "red": #DD5746
 )
