--- a/EComerceClient/websuggest/src/style/pages/_theme.scss
+++ b/EComerceClient/websuggest/src/style/pages/_theme.scss
@@ -3,5 +3,6 @@ $theme-colors : (
     "header": #77B0AA,
     "text-in-dark": #E3FEF7,
     "icon-color": #135D66,
-    "red": #DD5746
+    "red": #DD5746,
+    "black-red":#A34343
 )
