--- a/EComerceClient/websuggest/src/pages/cartPages/style.scss
+++ b/EComerceClient/websuggest/src/pages/cartPages/style.scss
@@ -1,31 +1,67 @@
 @use "sass:map";
 @import "./src/style/pages/theme";
 
-
-.cart-border {
-    display: flex;
-    align-items: center;
+.row {
     justify-content: center;
-    width: 100%;
-    height: 100%;
+    margin-bottom: 15px;
+    h2 {
+        color: map.get($theme-colors,'main');
+        text-transform: uppercase;
+        letter-spacing: 2px;
+    }
+    
+}
+
+.container-pay {
     margin-top: 20px;
-    margin-bottom: 30px;
-    .cart-items {
-        width: 70%;
-        height: 150px;
+    display: flex;
+    flex-direction: column; 
+    align-items: flex-end; 
+    justify-content: center; 
+    width: 90%;
+    margin-bottom: 15px;
+
+    p {
+        font-size: 16px;
+        font-weight: bold;
+        color: map.get($theme-colors,'red');
+        margin-bottom: 15px;
+    }
+
+    .btnPay {
+        border-radius: 5px;
+        background-color: map.get($theme-colors,'black-red');
+        color: white; 
+        border: none;
+        font-size: 16px;
+        font-weight: 500;
+        width: 100px;
+        height: 35px;
+        cursor: pointer;
+        margin-bottom: 20px;
+        transition: all 0.2s;
+        
+        &:hover {
+            background-color: map.get($theme-colors,'red');
+        }
+    }  
+}
+
+
+.cart-items {
+        height: 120px;
         display: flex;
-        justify-self: center;
         border-radius: 10px;
         border: 1px solid map.get($theme-colors,'main');
         align-items: center;
         padding: 20px 15px 20px 15px;
+        
         img {
-            width: 15%;
-            height: 60%;
+            width: 100%;
+            height: 100%;
     
         }
         .cart-text-left {
-            width: 60%;
             align-items: center;
             margin-left: 50px;
             h6 {
@@ -45,23 +81,30 @@
 
             }
         }
-        .cart-text-right{
-            width: 25%;
-            align-items: center;
-            padding-left: 30px;
+        .cart-text-right {
+            align-items: center right;
+            display: flex;
+            flex-direction: column; /* Sắp xếp các item theo chiều dọc */
+            width: 100%;
+            
             button {
                 border-radius: 5px;
-                background-color: map.get($theme-colors,'red');
+                background-color: map.get($theme-colors,'black-red');
                 color: white; 
                 border: none;
                 font-size: 16px;
                 font-weight: 500;
                 width: 100px;
                 height: 35px;
-                margin-bottom: 20px;
                 cursor: pointer;
+                margin-bottom: 20px;
+                transition: all 0.2s;
+                &:hover{
+                    background-color: map.get($theme-colors,'red');
+                }
             }
-            span{
+            
+            span {
                 width: 100%;
                 font-size: 16px;
                 font-weight: 700;
@@ -69,5 +112,5 @@
                 color: map.get($theme-colors,'main');
             }
         }
-    }
+        
 }
